--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,20 @@
-/* Aplicar Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
-
 body {
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
     background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
-    color: #343a40;
 }
 
 header {
-    background: linear-gradient(45deg, #343a40, #495057);
+    background: linear-gradient(45deg, #f7931a, #ffc107);
     color: white;
     padding: 20px;
-    border-radius: 5px;
-    text-align: center;
-}
-
-h1, h2 {
-    color: #495057;
-    margin-bottom: 20px;
+    border-radius: 8px;
 }
 
 img {
     border-radius: 5px;
-    margin-bottom: 20px;
-    transition: transform 0.3s ease-in-out;
+    transition: transform 0.3s;
 }
 
 img:hover {
-    transform: scale(1.05);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-/* Espaciado para las secciones */
-section {
-    margin: 40px 0;
-}
-
-footer {
-    background-color: #343a40;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    margin-top: 20px;
+    transform: scale(1.1);
 }
